<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backMeal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/back_arrow"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/myMealTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="5dp"
            android:text="@string/my_meal"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/home_view"
            app:srcCompat="@drawable/home" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="56dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/verticalLayout"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="56dp"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>